[package]
name = "liboptispeech"
version = "0.1.0"
edition = "2021"

[lib]
name = "liboptispeech"
crate-type = ["cdylib"]

[dependencies]
optispeech = { path = "../optispeech" }
audio-ops = { path = "../audio-ops" }
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"
anyhow = "1.0.94"
